Added a /visit graph and modified responses of visit posts to returnn the Visit with status information
